View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027463 | Open CASCADE | OCCT:Tests | public | 2016-05-04 13:30 | 2016-12-09 16:37 |
Reporter | apn | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027463: Checkprops can not be used with several properties | ||||
Description | Added possibility to use several properties in one checkprops command (e.g. checkprops result -s 1456.2 -v 400) | ||||
Steps To Reproduce | checkprops result -s 1456.2 -v 400 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27463 has been created by apn. SHA-1: bad8d057c28587fff4412da4bec802f30ed8f420 Detailed log of new commits: Author: apn Date: Wed May 4 14:13:02 2016 +0300 0027463: Checkprops can not be used with several properties Added possibility to use several properties in one checkprops command |
|
Dear ski, please review CR27463. |
|
Reviewed without remarks, please proceed. |
|
Dear BugMaster, Branch CR27463 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: bad8d057c28587fff4412da4bec802f30ed8f420 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 0 (0 on master) products component: Linux: 72 Windows: 4 MacOS: 1129 Regressions/Differences: http://occt-tests/CR27463-master-OCCT/Debian70-64/summary.html http://occt-tests/CR27463-master-OCCT/Windows-64-VC10/summary.html pipe specific K4, K7, K8, L1, L4, L5, L7, L9, M2, M4, M6, M9, N1, N4, N5, N7, N9, O2, O4, O6, O8, P1 P3, P5, P7, P9, Q2, Q4, Q6, Q8, R1, R3, R5, R7, R9, S2, S4, S6, S7 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 88033265 / 87414469 [+0.71%] Total CPU difference: 19270.06999999993 / 19364.490000000176 [-0.49%] Testing on Windows: Total MEMORY difference: 55494596 / 55528156 [-0.06%] Total CPU difference: 18336.357539998804 / 18262.678267698826 [+0.40%] |
|
Dear apn, Branch CR27463 has been rejected due to: - regressions/differences/improvements |
|
Branch CR27463 has been updated by apn. SHA-1: e4835ad05b218cd96ddbc24d445049d9436f4f48 Detailed log of new commits: Author: apn Date: Thu May 5 16:01:47 2016 +0300 Modified test cases according to changes in checkprops command |
|
Command checkprops didn't take several arguments (-s -v -l), that's why test cases in pipe group worked incorrect (only last check vprops). Now all checks works correct (sprops and vprops). Reference data was modified because earlier it didn't consider epsillon parameter. |
|
Dear BugMaster, Branch CR27463 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: e4835ad05b218cd96ddbc24d445049d9436f4f48 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 72 (72 on master) Windows: 4 (4 on master) MacOS : 1131 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Modified testing cases: pipe specific K4, K7, K8, L1, L4, L5, L7, L9, M2, M4, M6, M9, N1, N4, N5, N7, N9, O2, O4, O6, O8, P1, P3, P5, P7, P9, Q2, Q4, Q6 , Q8, R1, R3, R5, R7, R9, S2, S4, S6, S7 - OK Testing on Linux: occt component : Total MEMORY difference: 87955459 / 87480793 [+0.54%] Total CPU difference: 19298.23 / 19370.520000000186 [-0.37%] products component : Total MEMORY difference: 27832233 / 27839978 [-0.03%] Total CPU difference: 5363.599999999975 / 5344.489999999986 [+0.36%] Testing on Windows: occt component : Total MEMORY difference: 55523711 / 55549122 [-0.05%] Total CPU difference: 18141.106688398875 / 18280.618382698816 [-0.76%] products component : Total MEMORY difference: 18922534 / 18891436 [+0.16%] Total CPU difference: 5114.367984199952 / 5013.591338199941 [+2.01%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR27463 is TESTED. |
|
Branch CR27463 has been deleted by inv. SHA-1: e4835ad05b218cd96ddbc24d445049d9436f4f48 |
occt: master c9de149d 2016-05-04 11:13:02 Committer: bugmaster Details Diff |
0027463: Checkprops can not be used with several properties Added possibility to use several properties in one checkprops command Modified test cases according to changes in checkprops command |
Affected Issues 0027463 |
|
mod - src/DrawResources/CheckCommands.tcl | Diff File | ||
mod - tests/pipe/specific/K4 | Diff File | ||
mod - tests/pipe/specific/K7 | Diff File | ||
mod - tests/pipe/specific/K8 | Diff File | ||
mod - tests/pipe/specific/L1 | Diff File | ||
mod - tests/pipe/specific/L4 | Diff File | ||
mod - tests/pipe/specific/L5 | Diff File | ||
mod - tests/pipe/specific/L7 | Diff File | ||
mod - tests/pipe/specific/L9 | Diff File | ||
mod - tests/pipe/specific/M2 | Diff File | ||
mod - tests/pipe/specific/M4 | Diff File | ||
mod - tests/pipe/specific/M6 | Diff File | ||
mod - tests/pipe/specific/M9 | Diff File | ||
mod - tests/pipe/specific/N1 | Diff File | ||
mod - tests/pipe/specific/N4 | Diff File | ||
mod - tests/pipe/specific/N5 | Diff File | ||
mod - tests/pipe/specific/N7 | Diff File | ||
mod - tests/pipe/specific/N9 | Diff File | ||
mod - tests/pipe/specific/O2 | Diff File | ||
mod - tests/pipe/specific/O4 | Diff File | ||
mod - tests/pipe/specific/O6 | Diff File | ||
mod - tests/pipe/specific/O8 | Diff File | ||
mod - tests/pipe/specific/P1 | Diff File | ||
mod - tests/pipe/specific/P3 | Diff File | ||
mod - tests/pipe/specific/P5 | Diff File | ||
mod - tests/pipe/specific/P7 | Diff File | ||
mod - tests/pipe/specific/P9 | Diff File | ||
mod - tests/pipe/specific/Q2 | Diff File | ||
mod - tests/pipe/specific/Q4 | Diff File | ||
mod - tests/pipe/specific/Q6 | Diff File | ||
mod - tests/pipe/specific/Q8 | Diff File | ||
mod - tests/pipe/specific/R1 | Diff File | ||
mod - tests/pipe/specific/R3 | Diff File | ||
mod - tests/pipe/specific/R5 | Diff File | ||
mod - tests/pipe/specific/R7 | Diff File | ||
mod - tests/pipe/specific/R9 | Diff File | ||
mod - tests/pipe/specific/S2 | Diff File | ||
mod - tests/pipe/specific/S4 | Diff File | ||
mod - tests/pipe/specific/S6 | Diff File | ||
mod - tests/pipe/specific/S7 | Diff File | ||
occt: master 3e6a4cd0 2016-05-05 15:01:02
Committer: bugmaster Details Diff |
0027463: BRepTools_ReShape ends up with empty shapes Add check on empty topological containers. Add empty shapes to the replacement map. Add Draw command for Re-Shape. Add a test grid for reshape with a single use case for starters. |
Affected Issues 0027463 |
|
mod - src/BRepTools/BRepTools_ReShape.cxx | Diff File | ||
mod - src/SWDRAW/SWDRAW_ShapeUpgrade.cxx | Diff File | ||
mod - tests/heal/grids.list | Diff File | ||
add - tests/heal/reshape/A1 | Diff File | ||
add - tests/heal/reshape/begin | Diff File | ||
add - tests/heal/reshape/end | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-05-04 13:30 | apn | New Issue | |
2016-05-04 13:30 | apn | Assigned To | => apn |
2016-05-04 13:30 | apn | Status | new => assigned |
2016-05-04 14:13 | git | Note Added: 0053798 | |
2016-05-04 14:13 | apn | Note Added: 0053799 | |
2016-05-04 14:13 | apn | Test case number | => Not needed |
2016-05-04 14:13 | apn | Assigned To | apn => ski |
2016-05-04 14:13 | apn | Status | assigned => resolved |
2016-05-04 14:39 |
|
Note Added: 0053800 | |
2016-05-04 14:39 |
|
Assigned To | ski => bugmaster |
2016-05-04 14:39 |
|
Status | resolved => reviewed |
2016-05-04 14:51 |
|
Assigned To | bugmaster => apv |
2016-05-05 12:09 |
|
Note Added: 0053831 | |
2016-05-05 12:09 |
|
Assigned To | apv => apn |
2016-05-05 12:09 |
|
Status | reviewed => assigned |
2016-05-05 12:10 |
|
Note Added: 0053832 | |
2016-05-05 16:02 | git | Note Added: 0053852 | |
2016-05-05 16:08 | apn | Note Added: 0053853 | |
2016-05-05 16:09 | apn | Assigned To | apn => bugmaster |
2016-05-05 16:09 | apn | Status | assigned => resolved |
2016-05-05 16:09 | apn | Status | resolved => reviewed |
2016-05-05 16:30 |
|
Assigned To | bugmaster => mkv |
2016-05-06 09:54 |
|
Note Added: 0053882 | |
2016-05-06 09:54 |
|
Note Added: 0053883 | |
2016-05-06 09:54 |
|
Assigned To | mkv => bugmaster |
2016-05-06 09:54 |
|
Status | reviewed => tested |
2016-05-13 12:41 | bugmaster | Changeset attached | => occt master 3e6a4cd0 |
2016-05-13 12:41 | bugmaster | Changeset attached | => occt master c9de149d |
2016-05-13 12:41 | bugmaster | Status | tested => verified |
2016-05-13 12:41 | bugmaster | Resolution | open => fixed |
2016-05-20 12:21 | git | Note Added: 0054188 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:37 |
|
Fixed in Version | => 7.1.0 |